--- a/application/static/index.html
+++ b/application/static/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>LabsArena</title>
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="connect-src 'self' wss:; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com">
@@ -18,6 +18,32 @@
     <link rel="apple-touch-icon" href="favicon.png" />
     <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
   </head>
+
 <body>
+	<div class="wrapper">
+		<div class="main_background">
+					<img src="images/main_background.jpg" width="1170" alt="main_background">
+				</div>
+				<div class="main_background2">
+					<img src="images/main_background2.jpg" width="1170" alt="main_background2">
+				</div>
+		<header class="header">
+			<div class="container">
+				<a href="index.html" id="header_logo"><img src="images/LOGO.png" width="66" height="34" alt="LOGO"></a>
+				<nav class="menu_body">
+					<ul class="menu_list">
+					<li><a href="">About us</a></li>
+					<li><a href="">Contact us</a></li>
+					<li><a href="">Support the project</a></li>
+					<li><a href="">Questionnaire</a></li>
+					<li><a href="">Blog</a></li>
+					<li ><a class="orange_button" href="">Registration</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<main id="content" class="page">
+		</main>
+	</div>
 </body>
 </html>
