--- a/application/static/index.html
+++ b/application/static/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="connect-src 'self' wss:; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="catalog.css">
-    <script src="catalog.js" type="module"></script>
+    <link rel="stylesheet" href="style/index.css">
     <meta name="HandheldFriendly" content="true" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -42,7 +41,127 @@
 				</nav>
 			</div>
 		</header>
-		<main id="content" class="page">
+		<main class="page">
+          <div class="container">
+				<div class="head_text">
+					<h1>
+						Hi! This project aims to help scientists to boost their research
+					</h1>
+				</div>
+				<div class="head_text2">
+					<p>
+						LabsArena.com is an online platform to search, share or sale scientific equipment & consumables.<br>
+						We will run our platform in one month, but you can do your pre-registration right now to try it first and fill out a short questionnaire to get extra features!
+					</p>
+				</div>
+				<div class="button1">
+					<a href="">QUESTIONNAIRE</a>
+				</div>
+				<div class="button2">
+					<a href="">REGISTER NOW</a>
+				</div>
+				<div class="text1">
+					<p>
+						Share this project with your colleagues:
+					</p>
+				</div>
+				<div class="share_button">
+					<a href="https://twitter.com/"><img src="images/twitter.png" width="18" height="18" alt="twitter"></a>
+					<a href="https://instagram.com/"><img src="images/instagram.png" width="18" height="18" alt="instagram"></a>
+					<a href="https://facebook.com/"><img src="images/facebook.png" width="18" height="18" alt="facebook"></a>
+				</div>
+			</div>
+			<div class="container">
+				<div class="head_text2">
+					<h2>We are the platform for</h2>
+				</div>
+				<div class="block">
+					<img src="images/1.png" width="120" alt="Search">
+					<h2>Search</h2>
+					<p id="ifd">Provide some details about this prize and its sponsor.</p>
+				</div>
+				<div class="block1">
+					<img src="images/2.png" width="120" alt="Search">
+					<h2>Share</h2>
+					<p id="ifd">Provide some details about this prize and its sponsor.</p>
+				</div>
+				<div class="block2">
+					<img src="images/3.png" width="120" alt="Search">
+					<h2>Sale</h2>
+					<p id="ifd">Provide some details about this prize and its sponsor.</p>
+				</div>
+			</div>
+			<div class="container">
+				<div class="about_us">
+					<h2>ABOUT US</h2>
+					<p>
+					Use this paragraph to explain the purpose of the contest, the impact that the winning entries will have, and the overall benefits for participants, beyond just the prizes. But mention the wonderful prizes too!
+					</p>
+				</div>
+			</div>
+			<div class="container">
+				<div class="done">
+					<h2>How to get your experiments done?</h2>
+				</div>
+				<div class="image_done">
+					<img src="images/4.png" width="850" alt="how to get done!">
+				</div>
+				<div class="head_done">
+					<h2>Search for equipment</h2>
+					<h2>Find a partner</h2>
+					<h2>Perform your research</h2>
+					<h2>Enjoy your results!</h2>
+				</div>
+				<div class="text_done">
+					<p>
+						Regular Text - Lorem ipsum dolor sit amet, consectetur 
+					</p>
+					<p>
+						Regular Text - Lorem ipsum dolor sit amet, consectetur 
+					</p>
+					<p>
+						Regular Text - Lorem ipsum dolor sit amet, consectetur 
+					</p>
+					<p>
+						Regular Text - Lorem ipsum dolor sit amet, consectetur 
+					</p>
+				</div>
+			</div>
+			<!--<div id="tag1">
+				<img src="images/4.png">
+				<img src="images/2.png">
+			</div>-->
+			<div class="container">
+			<div class="line">
+				<p></p>
+			</div>
+			<div class="contact_us">
+				<form action="index.html" class="box" method="post">
+					<h2>Contact us</h2>
+					<p class="ab">
+					<p class="a">
+						Name<br><input type="text" name="name" required placeholder="Your name">
+					</p>
+					<p class="b">
+						Email Address<br><input type="email" name="mail" required placeholder="Email"><br>
+					</p>
+					</p>
+					<p class="c">
+						Description<br><textarea required name="description"></textarea><br>
+					</p>
+					<p class="d">
+						<label for="file">Мой текст</label>
+						Upload a file<input type="file" name="file" required placeholder="Select file..."><br>
+					</p>
+					<p class="e">
+						<input type="checkbox" name="terms" required> I have read and agree with the <a href="">Terms & Conditions</a><br>
+					</p>
+					<p class="f">
+						<input type="submit" name="submit" value="ENTER">
+					</p>
+				</form>
+			</div>
+			</div>
 		</main>
 	</div>
 </body>
